# scramjet

./: .gitmodules  LICENSE  README.md
apps/hello/: CMakeLists.txt  foo.cpp  foo.h  main.cpp
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/evalbytecode/: CMakeLists.txt  main.cpp
src/apps/hello/: CMakeLists.txt  README.md  main.cpp
src/apps/test/: CMakeLists.txt  main.cpp
src/groups/: CMakeLists.txt
src/groups/sjt/: CMakeLists.txt
src/groups/sjt/group/: sjt.mem
src/groups/sjt/sjtd/: CMakeLists.txt  README.md  sjtd_datumfactory.cpp  sjtd_datumfactory.h  sjtd_datumfactory.t.cpp  sjtd_datumudtutil.cpp  sjtd_datumudtutil.h  sjtd_datumudtutil.t.cpp
src/groups/sjt/sjtm/: CMakeLists.txt  sjtm_datumfactory.cpp  sjtm_datumfactory.h  sjtm_datumfactory.t.cpp  sjtm_engine.cpp  sjtm_engine.h  sjtm_engine.t.cpp
src/groups/sjt/sjtm/package/: sjtm.mem
src/groups/sjt/sjtt/: CMakeLists.txt  sjtt_bytecode.cpp  sjtt_bytecode.h  sjtt_bytecode.t.cpp  sjtt_datumudtutil.cpp  sjtt_datumudtutil.h  sjtt_datumudtutil.t.cpp  sjtt_executioncontext.cpp  sjtt_executioncontext.h  sjtt_executioncontext.t.cpp  sjtt_frame.cpp  sjtt_frame.h  sjtt_frame.t.cpp  sjtt_function.cpp  sjtt_function.h  sjtt_function.t.cpp
src/groups/sjt/sjtt/package/: sjtt.mem
src/groups/sjt/sjtu/: CMakeLists.txt  sjtu_bytecodedslutil.cpp  sjtu_bytecodedslutil.h  sjtu_bytecodedslutil.t.cpp  sjtu_datumutil.cpp  sjtu_datumutil.h  sjtu_datumutil.t.cpp  sjtu_interpretutil.cpp  sjtu_interpretutil.h  sjtu_interpretutil.t.cpp
tools/: build-bde.bash  runtests.py  test.bash
