cmake_minimum_required (VERSION 2.6)
include_directories("sjtd")
include_directories("sjtt")
include_directories("sjtu")
add_subdirectory(sjtd)
add_subdirectory(sjtt)
add_subdirectory(sjtu)
add_library(sjt $<TARGET_OBJECTS:sjtd> $<TARGET_OBJECTS:sjtt>
    $<TARGET_OBJECTS:sjtu>)
target_link_libraries(sjt bdl bsl decnumber inteldfp)
